vcluster_versioned_docs/version-0.28.0/_partials/config/privateNodes/autoNodes.mdx

<details className="config-field" data-expandable="true">
<summary>

## `autoNodes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes}

AutoNodes stores auto nodes configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `provider` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-provider}

Provider is the node provider of the nodes in this pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `properties` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-properties}

Properties are the node provider properties. This is a simple key value map and can contain things
like region, subscription, etc. that is then used by the node provider to create the nodes and node environment.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `static` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static}

Static defines static node pools. Static node pools have a fixed size and are not scaled automatically.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-name}

Name is the name of this static nodePool

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeTypeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-nodeTypeSelector}

NodeTypeSelector filters the types of nodes that can be provisioned by this pool.
All requirements must be met for a node type to be eligible.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `property` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-nodeTypeSelector-property}

Property is the property on the node type to select.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-nodeTypeSelector-operator}

Operator is the comparison operator, such as "In", "NotIn", "Exists". If empty, defaults to "In".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-nodeTypeSelector-values}

Values is the list of values to use for comparison. This is mutually exclusive with value.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-nodeTypeSelector-value}

Value is the value to use for comparison. This is mutually exclusive with values.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `taints` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-taints}

Taints are the taints to apply to the nodes in this pool.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-taints-key}

Required. The taint key to be applied to a node.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-taints-value}

The taint value corresponding to the taint key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `effect` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-taints-effect}

Required. The effect of the taint on pods
that do not tolerate the taint.
Valid effects are NoSchedule, PreferNoSchedule and NoExecute.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nodeLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-nodeLabels}

NodeLabels are the labels to apply to the nodes in this pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `terminationGracePeriod` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-terminationGracePeriod}

TerminationGracePeriod is the maximum duration the controller will wait before forcefully deleting the pods on a node, measured from when deletion is first initiated.

Warning: this feature takes precedence over a Pod's terminationGracePeriodSeconds value, and bypasses any blocked PDBs or the karpenter.sh/do-not-disrupt annotation.

This field is intended to be used by cluster administrators to enforce that nodes can be cycled within a given time period.
When set, drifted nodes will begin draining even if there are pods blocking eviction. Draining will respect PDBs and the do-not-disrupt annotation until the TGP is reached.

Karpenter will preemptively delete pods so their terminationGracePeriodSeconds align with the node's terminationGracePeriod.
If a pod would be terminated without being granted its full terminationGracePeriodSeconds prior to the node timeout,
that pod will be deleted at T = node timeout - pod terminationGracePeriodSeconds.

The feature can also be used to allow maximum time limits for long-running jobs which can delay node termination with preStop hooks.
Defaults to 30s. Set to Never to wait indefinitely for pods to be drained.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `quantity` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-static-quantity}

Quantity is the number of desired nodes in this pool.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `dynamic` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic}

Dynamic defines dynamic node pools. Dynamic node pools are scaled automatically based on the requirements within the cluster.
Karpenter is used under the hood to handle the scheduling of the nodes.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-name}

Name is the name of this NodePool

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeTypeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-nodeTypeSelector}

NodeTypeSelector filters the types of nodes that can be provisioned by this pool.
All requirements must be met for a node type to be eligible.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `property` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-nodeTypeSelector-property}

Property is the property on the node type to select.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-nodeTypeSelector-operator}

Operator is the comparison operator, such as "In", "NotIn", "Exists". If empty, defaults to "In".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-nodeTypeSelector-values}

Values is the list of values to use for comparison. This is mutually exclusive with value.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-nodeTypeSelector-value}

Value is the value to use for comparison. This is mutually exclusive with values.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `taints` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-taints}

Taints are the taints to apply to the nodes in this pool.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-taints-key}

Required. The taint key to be applied to a node.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-taints-value}

The taint value corresponding to the taint key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `effect` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-taints-effect}

Required. The effect of the taint on pods
that do not tolerate the taint.
Valid effects are NoSchedule, PreferNoSchedule and NoExecute.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nodeLabels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-nodeLabels}

NodeLabels are the labels to apply to the nodes in this pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `limits` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-limits}

Limits specify the maximum resources that can be provisioned by this node pool,
mapping to the 'limits' field in Karpenter's NodePool API.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `disruption` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-disruption}

Disruption contains the parameters that relate to Karpenter's disruption logic

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `consolidateAfter` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-disruption-consolidateAfter}

ConsolidateAfter is the duration the controller will wait
before attempting to terminate nodes that are underutilized.
Refer to ConsolidationPolicy for how underutilization is considered.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `consolidationPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-disruption-consolidationPolicy}

ConsolidationPolicy describes which nodes Karpenter can disrupt through its consolidation
algorithm. This policy defaults to "WhenEmptyOrUnderutilized" if not specified

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `budgets` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-disruption-budgets}

Budgets is a list of Budgets.
If there are multiple active budgets, Karpenter uses
the most restrictive value. If left undefined,
this will default to one budget with a value to 10%.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `nodes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-disruption-budgets-nodes}

Nodes dictates the maximum number of NodeClaims owned by this NodePool
that can be terminating at once. This is calculated by counting nodes that
have a deletion timestamp set, or are actively being deleted by Karpenter.
This field is required when specifying a budget.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `schedule` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-disruption-budgets-schedule}

Schedule specifies when a budget begins being active, following
the upstream cronjob syntax. If omitted, the budget is always active.
Timezones are not supported.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `duration` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-disruption-budgets-duration}

Duration determines how long a Budget is active since each Schedule hit.
Only minutes and hours are accepted, as cron does not work in seconds.
If omitted, the budget is always active.
This is required if Schedule is set.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `terminationGracePeriod` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-terminationGracePeriod}

TerminationGracePeriod is the maximum duration the controller will wait before forcefully deleting the pods on a node, measured from when deletion is first initiated.

Warning: this feature takes precedence over a Pod's terminationGracePeriodSeconds value, and bypasses any blocked PDBs or the karpenter.sh/do-not-disrupt annotation.

This field is intended to be used by cluster administrators to enforce that nodes can be cycled within a given time period.
When set, drifted nodes will begin draining even if there are pods blocking eviction. Draining will respect PDBs and the do-not-disrupt annotation until the TGP is reached.

Karpenter will preemptively delete pods so their terminationGracePeriodSeconds align with the node's terminationGracePeriod.
If a pod would be terminated without being granted its full terminationGracePeriodSeconds prior to the node timeout,
that pod will be deleted at T = node timeout - pod terminationGracePeriodSeconds.

The feature can also be used to allow maximum time limits for long-running jobs which can delay node termination with preStop hooks.
Defaults to 30s. Set to Never to wait indefinitely for pods to be drained.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `expireAfter` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-expireAfter}

The amount of time a Node can live on the cluster before being removed

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `weight` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoNodes-dynamic-weight}

Weight is the weight of this node pool.

</summary>



</details>


</details>


</details>
